--- a/locales/ru.json
+++ b/locales/ru.json
@@ -148,7 +148,7 @@
 	"Быстрое изменение направления тренда": "Быстрое изменение направления тренда",
 	"Стратегия Полосы Боллинджера": "Стратегия Полосы Боллинджера",
 	"Отклонение": "Отклонение",
-	"Таймфрейм (в мин)": "Таймфрейм (в мин)",
+	"Интервал запроса цен (в мин)": "Интервал запроса цен (в мин)",
 	"Стратегия": "Стратегия",
 	"Разница между ценой LastPrice и первым ордером в сетке ордеров в %": "Разница между ценой LastPrice и первым ордером в сетке ордеров в %",
 	"При таких настройках депозита хватит на %s хода цены!!! Не мало ли?": "При таких настройках депозита хватит на %s хода цены!!! Не мало ли?",
